# 9.2_Qt_Modules_very_begin

Modules_SQL_Network/: CMakeLists.txt  main.cpp
